cmake_minimum_required(VERSION 3.29)

project(Mithril LANGUAGES CXX C VERSION 1.0.0 DESCRIPTION "Mithril Engine")

set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE INTERNAL "" FORCE)

add_subdirectory(Mithril)
add_subdirectory(Sandbox)
